ML/parser.output
   0  $accept : %entry% $end

   1  type : T_INT
   2       | T_BOOL
   3       | LT typelist ARROW type GT
   4       | LT paramlist GT
   5       | T_UNIT

   6  typelist : type
   7           | type COMMA typelist

   8  varlist : VAR
   9          | VAR COMMA varlist

  10  paramlist : VAR COLON type
  11            | U VAR COLON type
  12            | VAR COLON type COMMA paramlist
  13            | U VAR COLON type COMMA paramlist

  14  exprlist : expr
  15           | expr COMMA exprlist

  16  field_bind : VAR COLON expr
  17             | U VAR COLON expr
  18             | MUT VAR COLON expr
  19             | MUT U VAR COLON expr

  20  fieldbindlist : field_bind
  21                | field_bind COMMA fieldbindlist

  22  expr : MINUS expr
  23       | NOT expr
  24       | expr AND expr
  25       | expr OR expr
  26       | expr PLUS expr
  27       | expr MINUS expr
  28       | expr TIMES expr
  29       | expr DIV expr
  30       | expr MOD expr
  31       | expr LT expr
  32       | expr LEQ expr
  33       | expr GT expr
  34       | expr GEQ expr
  35       | expr NOTEQUALS expr
  36       | expr EQUALS expr
  37       | LAMBDA LPAREN OR paramlist RPAREN ARROW type LBRACE expr RBRACE
  38       | LAMBDA VAR LPAREN OR paramlist RPAREN ARROW type LBRACE expr RBRACE
  39       | LAMBDA LPAREN varlist OR paramlist RPAREN ARROW type LBRACE expr RBRACE
  40       | LAMBDA VAR LPAREN varlist OR paramlist RPAREN ARROW type LBRACE expr RBRACE
  41       | VAR LPAREN exprlist RPAREN
  42       | DESTROY LPAREN expr RPAREN
  43       | SLEEP LPAREN expr RPAREN
  44       | TRUE
  45       | FALSE
  46       | INT
  47       | VAR
  48       | LPAREN expr RPAREN
  49       | LBRACE fieldbindlist RBRACE
  50       | expr DOT VAR
  51       | expr SEMI expr
  52       | IF expr LBRACE expr RBRACE ELSE LBRACE expr RBRACE
  53       | WHILE expr LBRACE expr RBRACE
  54       | FOCUS expr LBRACE expr RBRACE
  55       | BRANCH varlist LBRACE expr RBRACE
  56       | LET VAR ASSIGN expr IN expr
  57       | expr ASSIGN expr
  58       | CLASS VAR LBRACE paramlist RBRACE

  59  p : expr EOF

  60  %entry% : '\001' p

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . p  (60)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 20
	p  goto 21


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	expr : INT .  (46)

	.  reduce 46


state 4
	expr : VAR . LPAREN exprlist RPAREN  (41)
	expr : VAR .  (47)

	LPAREN  shift 22
	PLUS  reduce 47
	MINUS  reduce 47
	TIMES  reduce 47
	DIV  reduce 47
	MOD  reduce 47
	RPAREN  reduce 47
	EQUALS  reduce 47
	NOTEQUALS  reduce 47
	LT  reduce 47
	LEQ  reduce 47
	GT  reduce 47
	GEQ  reduce 47
	AND  reduce 47
	OR  reduce 47
	ASSIGN  reduce 47
	SEMI  reduce 47
	LBRACE  reduce 47
	RBRACE  reduce 47
	COMMA  reduce 47
	IN  reduce 47
	EOF  reduce 47
	DOT  reduce 47


state 5
	expr : MINUS . expr  (22)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 23


state 6
	expr : LPAREN . expr RPAREN  (48)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 24


state 7
	expr : TRUE .  (44)

	.  reduce 44


state 8
	expr : FALSE .  (45)

	.  reduce 45


state 9
	expr : NOT . expr  (23)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 25


state 10
	expr : IF . expr LBRACE expr RBRACE ELSE LBRACE expr RBRACE  (52)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 26


state 11
	expr : WHILE . expr LBRACE expr RBRACE  (53)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 27


state 12
	expr : LBRACE . fieldbindlist RBRACE  (49)

	VAR  shift 28
	U  shift 29
	MUT  shift 30
	.  error

	field_bind  goto 31
	fieldbindlist  goto 32


state 13
	expr : LAMBDA . LPAREN OR paramlist RPAREN ARROW type LBRACE expr RBRACE  (37)
	expr : LAMBDA . VAR LPAREN OR paramlist RPAREN ARROW type LBRACE expr RBRACE  (38)
	expr : LAMBDA . LPAREN varlist OR paramlist RPAREN ARROW type LBRACE expr RBRACE  (39)
	expr : LAMBDA . VAR LPAREN varlist OR paramlist RPAREN ARROW type LBRACE expr RBRACE  (40)

	VAR  shift 33
	LPAREN  shift 34
	.  error


state 14
	expr : BRANCH . varlist LBRACE expr RBRACE  (55)

	VAR  shift 35
	.  error

	varlist  goto 36


state 15
	expr : FOCUS . expr LBRACE expr RBRACE  (54)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 37


state 16
	expr : SLEEP . LPAREN expr RPAREN  (43)

	LPAREN  shift 38
	.  error


state 17
	expr : LET . VAR ASSIGN expr IN expr  (56)

	VAR  shift 39
	.  error


state 18
	expr : DESTROY . LPAREN expr RPAREN  (42)

	LPAREN  shift 40
	.  error


state 19
	expr : CLASS . VAR LBRACE paramlist RBRACE  (58)

	VAR  shift 41
	.  error


state 20
	expr : expr . AND expr  (24)
	expr : expr . OR expr  (25)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIV expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . LT expr  (31)
	expr : expr . LEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . GEQ expr  (34)
	expr : expr . NOTEQUALS expr  (35)
	expr : expr . EQUALS expr  (36)
	expr : expr . DOT VAR  (50)
	expr : expr . SEMI expr  (51)
	expr : expr . ASSIGN expr  (57)
	p : expr . EOF  (59)

	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIV  shift 45
	MOD  shift 46
	EQUALS  shift 47
	NOTEQUALS  shift 48
	LT  shift 49
	LEQ  shift 50
	GT  shift 51
	GEQ  shift 52
	AND  shift 53
	OR  shift 54
	ASSIGN  shift 55
	SEMI  shift 56
	EOF  shift 57
	DOT  shift 58
	.  error


state 21
	%entry% : '\001' p .  (60)

	.  reduce 60


state 22
	expr : VAR LPAREN . exprlist RPAREN  (41)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 59
	exprlist  goto 60


state 23
	expr : MINUS expr .  (22)
	expr : expr . AND expr  (24)
	expr : expr . OR expr  (25)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIV expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . LT expr  (31)
	expr : expr . LEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . GEQ expr  (34)
	expr : expr . NOTEQUALS expr  (35)
	expr : expr . EQUALS expr  (36)
	expr : expr . DOT VAR  (50)
	expr : expr . SEMI expr  (51)
	expr : expr . ASSIGN expr  (57)

	TIMES  shift 44
	DIV  shift 45
	MOD  shift 46
	DOT  shift 58
	PLUS  reduce 22
	MINUS  reduce 22
	RPAREN  reduce 22
	EQUALS  reduce 22
	NOTEQUALS  reduce 22
	LT  reduce 22
	LEQ  reduce 22
	GT  reduce 22
	GEQ  reduce 22
	AND  reduce 22
	OR  reduce 22
	ASSIGN  reduce 22
	SEMI  reduce 22
	LBRACE  reduce 22
	RBRACE  reduce 22
	COMMA  reduce 22
	IN  reduce 22
	EOF  reduce 22


state 24
	expr : expr . AND expr  (24)
	expr : expr . OR expr  (25)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIV expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . LT expr  (31)
	expr : expr . LEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . GEQ expr  (34)
	expr : expr . NOTEQUALS expr  (35)
	expr : expr . EQUALS expr  (36)
	expr : LPAREN expr . RPAREN  (48)
	expr : expr . DOT VAR  (50)
	expr : expr . SEMI expr  (51)
	expr : expr . ASSIGN expr  (57)

	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIV  shift 45
	MOD  shift 46
	RPAREN  shift 61
	EQUALS  shift 47
	NOTEQUALS  shift 48
	LT  shift 49
	LEQ  shift 50
	GT  shift 51
	GEQ  shift 52
	AND  shift 53
	OR  shift 54
	ASSIGN  shift 55
	SEMI  shift 56
	DOT  shift 58
	.  error


state 25
	expr : NOT expr .  (23)
	expr : expr . AND expr  (24)
	expr : expr . OR expr  (25)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIV expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . LT expr  (31)
	expr : expr . LEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . GEQ expr  (34)
	expr : expr . NOTEQUALS expr  (35)
	expr : expr . EQUALS expr  (36)
	expr : expr . DOT VAR  (50)
	expr : expr . SEMI expr  (51)
	expr : expr . ASSIGN expr  (57)

	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIV  shift 45
	MOD  shift 46
	EQUALS  shift 47
	NOTEQUALS  shift 48
	LT  shift 49
	LEQ  shift 50
	GT  shift 51
	GEQ  shift 52
	DOT  shift 58
	RPAREN  reduce 23
	AND  reduce 23
	OR  reduce 23
	ASSIGN  reduce 23
	SEMI  reduce 23
	LBRACE  reduce 23
	RBRACE  reduce 23
	COMMA  reduce 23
	IN  reduce 23
	EOF  reduce 23


state 26
	expr : expr . AND expr  (24)
	expr : expr . OR expr  (25)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIV expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . LT expr  (31)
	expr : expr . LEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . GEQ expr  (34)
	expr : expr . NOTEQUALS expr  (35)
	expr : expr . EQUALS expr  (36)
	expr : expr . DOT VAR  (50)
	expr : expr . SEMI expr  (51)
	expr : IF expr . LBRACE expr RBRACE ELSE LBRACE expr RBRACE  (52)
	expr : expr . ASSIGN expr  (57)

	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIV  shift 45
	MOD  shift 46
	EQUALS  shift 47
	NOTEQUALS  shift 48
	LT  shift 49
	LEQ  shift 50
	GT  shift 51
	GEQ  shift 52
	AND  shift 53
	OR  shift 54
	ASSIGN  shift 55
	SEMI  shift 56
	LBRACE  shift 62
	DOT  shift 58
	.  error


state 27
	expr : expr . AND expr  (24)
	expr : expr . OR expr  (25)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIV expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . LT expr  (31)
	expr : expr . LEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . GEQ expr  (34)
	expr : expr . NOTEQUALS expr  (35)
	expr : expr . EQUALS expr  (36)
	expr : expr . DOT VAR  (50)
	expr : expr . SEMI expr  (51)
	expr : WHILE expr . LBRACE expr RBRACE  (53)
	expr : expr . ASSIGN expr  (57)

	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIV  shift 45
	MOD  shift 46
	EQUALS  shift 47
	NOTEQUALS  shift 48
	LT  shift 49
	LEQ  shift 50
	GT  shift 51
	GEQ  shift 52
	AND  shift 53
	OR  shift 54
	ASSIGN  shift 55
	SEMI  shift 56
	LBRACE  shift 63
	DOT  shift 58
	.  error


state 28
	field_bind : VAR . COLON expr  (16)

	COLON  shift 64
	.  error


state 29
	field_bind : U . VAR COLON expr  (17)

	VAR  shift 65
	.  error


state 30
	field_bind : MUT . VAR COLON expr  (18)
	field_bind : MUT . U VAR COLON expr  (19)

	VAR  shift 66
	U  shift 67
	.  error


state 31
	fieldbindlist : field_bind .  (20)
	fieldbindlist : field_bind . COMMA fieldbindlist  (21)

	COMMA  shift 68
	RBRACE  reduce 20


state 32
	expr : LBRACE fieldbindlist . RBRACE  (49)

	RBRACE  shift 69
	.  error


state 33
	expr : LAMBDA VAR . LPAREN OR paramlist RPAREN ARROW type LBRACE expr RBRACE  (38)
	expr : LAMBDA VAR . LPAREN varlist OR paramlist RPAREN ARROW type LBRACE expr RBRACE  (40)

	LPAREN  shift 70
	.  error


state 34
	expr : LAMBDA LPAREN . OR paramlist RPAREN ARROW type LBRACE expr RBRACE  (37)
	expr : LAMBDA LPAREN . varlist OR paramlist RPAREN ARROW type LBRACE expr RBRACE  (39)

	VAR  shift 35
	OR  shift 71
	.  error

	varlist  goto 72


state 35
	varlist : VAR .  (8)
	varlist : VAR . COMMA varlist  (9)

	COMMA  shift 73
	OR  reduce 8
	LBRACE  reduce 8


state 36
	expr : BRANCH varlist . LBRACE expr RBRACE  (55)

	LBRACE  shift 74
	.  error


state 37
	expr : expr . AND expr  (24)
	expr : expr . OR expr  (25)
	expr : expr . PLUS expr  (26)
	expr : expr . MINUS expr  (27)
	expr : expr . TIMES expr  (28)
	expr : expr . DIV expr  (29)
	expr : expr . MOD expr  (30)
	expr : expr . LT expr  (31)
	expr : expr . LEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . GEQ expr  (34)
	expr : expr . NOTEQUALS expr  (35)
	expr : expr . EQUALS expr  (36)
	expr : expr . DOT VAR  (50)
	expr : expr . SEMI expr  (51)
	expr : FOCUS expr . LBRACE expr RBRACE  (54)
	expr : expr . ASSIGN expr  (57)

	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIV  shift 45
	MOD  shift 46
	EQUALS  shift 47
	NOTEQUALS  shift 48
	LT  shift 49
	LEQ  shift 50
	GT  shift 51
	GEQ  shift 52
	AND  shift 53
	OR  shift 54
	ASSIGN  shift 55
	SEMI  shift 56
	LBRACE  shift 75
	DOT  shift 58
	.  error


state 38
	expr : SLEEP LPAREN . expr RPAREN  (43)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 76


state 39
	expr : LET VAR . ASSIGN expr IN expr  (56)

	ASSIGN  shift 77
	.  error


state 40
	expr : DESTROY LPAREN . expr RPAREN  (42)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 78


state 41
	expr : CLASS VAR . LBRACE paramlist RBRACE  (58)

	LBRACE  shift 79
	.  error


state 42
	expr : expr PLUS . expr  (26)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 80


state 43
	expr : expr MINUS . expr  (27)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 81


state 44
	expr : expr TIMES . expr  (28)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 82


state 45
	expr : expr DIV . expr  (29)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 83


state 46
	expr : expr MOD . expr  (30)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 84


state 47
	expr : expr EQUALS . expr  (36)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 85


state 48
	expr : expr NOTEQUALS . expr  (35)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 86


state 49
	expr : expr LT . expr  (31)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 87


state 50
	expr : expr LEQ . expr  (32)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 88


state 51
	expr : expr GT . expr  (33)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 89


state 52
	expr : expr GEQ . expr  (34)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 90


state 53
	expr : expr AND . expr  (24)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 91


state 54
	expr : expr OR . expr  (25)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 92


state 55
	expr : expr ASSIGN . expr  (57)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 93


state 56
	expr : expr SEMI . expr  (51)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	LBRACE  shift 12
	LAMBDA  shift 13
	BRANCH  shift 14
	FOCUS  shift 15
	SLEEP  shift 16
	LET  shift 17
	DESTROY  shift 18
	CLASS  shift 19
	.  error

	expr  goto 94


state 57
	p : expr EOF .  (59)

	.  reduce 59


state 58
	expr : expr DOT . VAR  (50)

	VAR  shift 95
	.  error

